# rag-axis

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/api/: client.js  endpoints.js  index.js  mockData.js
dashboard/src/components/Charts/: BarChart.jsx  LineChart.jsx  ScatterChart.jsx  index.js
dashboard/src/components/Common/: CorpusCard.jsx  Disclosure.jsx  ErrorCard.jsx  ExperimentCard.jsx  IngestModal.jsx  RunDetailPanel.jsx  RunResultView.jsx  StatCard.jsx  index.js
dashboard/src/components/Layout/: Header.jsx  Sidebar.jsx
dashboard/src/components/UI/: Badge.jsx  Button.jsx  Card.jsx  FormInput.jsx  LoadingSpinner.jsx  Modal.jsx  ProgressBar.jsx  SidePanel.jsx  Table.jsx  Tabs.jsx  Toast.jsx  index.js
dashboard/src/hooks/: index.js  useApi.js  useAsync.js  useConfigurations.js  useExperiments.js  useFetch.js  useKnowledge.js  useMetrics.js  usePolling.js  useProjects.js  useRuns.js
dashboard/src/pages/: Configurations.jsx  Corpora.jsx  CorpusDetail.jsx  ExperimentCompare.jsx  ExperimentDetail.jsx  Experiments.jsx  Health.jsx  Knowledge.jsx  Overview.jsx  Playground.jsx  ProjectDashboard.jsx  Projects.jsx  Runs.jsx  Settings.jsx  index.js
dashboard/src/stores/: playgroundStore.js  projectStore.js  uiStore.js
dashboard/src/utils/: constants.js  format.js  helpers.js
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json
docs/docs/: faq.md  intro.md  troubleshooting.md
docs/docs/api-reference/: adapters.md  core.md  overview.md  retrieval.md  server.md  synthesis.md  system.md
docs/docs/concepts/: cost-accountability.md  failure-modes.md  invariants-explained.md  layers.md  pydantic-boundaries.md  rag-system-layers.md  why-immutability-matters.md
docs/docs/examples/: basic-rag.md  custom-retrieval.md  server-deployment.md  with-adapters.md
docs/docs/getting-started/: installation.md  quickstart.md  what-is-rag-axis.md  why-not-langchain.md  your-first-rag.md
docs/docs/guides/: building-custom-adapter.md  composing-layers.md  contributing-invariants.md  contributing-release.md  contributing-setup.md  deploying-server.md  index.md  using-ldk.md
docs/internal/: index.md  mkdocs.yml  packages-reference.md  rag-axis-context-reference.md  rag-axis-packages-reference.md  reference.md
docs/internal/api-sketches/: adapters-api.md  core-api.md  retrieval-api.md  synthesis-api.md  system-api.md
docs/internal/checklists/: contract-enforcement.md  invariant-validation.md  phase-completion-checklist.md  pre-merge-checklist.md
docs/internal/contracts/: adapters.md  audit-trails.md  configuration.md  errors.md  relationship-graph.md  reproducibility.md  types.md
docs/internal/debug-guides/: adapter-debugging.md  cost-tracking.md  embedder-mismatch.md  provenance-errors.md  score-collapse.md  truncation-audit.md  type-errors.md
docs/internal/design-decisions/: adr-0001-frozen-dataclasses.md  adr-0002-protocol-adapters.md  adr-0003-rrf-hybrid-fusion.md  adr-0004-otel-native.md  adr-0005-aiprims-rag-errors.md  adr-0006-audit-trails-as-types.md  adr-0007-cost-tracking-native.md  adr-README.md  adr-template.md
docs/internal/notes/: 2026-05-20-kickoff.md  decisions-log.md  open-questions.md
docs/internal/phase-roadmap/: overview.md  phase-0-index-layer.md  phase-1-retrieval-layer.md  phase-2-synthesis-layer.md  phase-3-system-orchestration.md
docs/internal/sprints/: v0.8.0-sprint.md
docs/internal/stub-specifications/: adapters-stubs.md  core-stubs.md  retrieval-stubs.md  stub-checklist.md  synthesis-stubs.md  system-stubs.md
docs/internal/testing-strategy/: fixtures.md  integration-tests.md  mocking-strategy.md  overview.md  phase-0-acceptance.md  phase-1-acceptance.md  phase-2-acceptance.md  phase-3-acceptance.md
docs/public/: faq.md  mint.json  troubleshooting.md
docs/public/api/: adapters.md  core.md  retrieval.md  server.md  synthesis.md  system.md
docs/public/concepts/: cost-accountability.md  failure-modes.md  invariants-explained.md  layers.md  rag-system-layers.md  why-immutability-matters.md
docs/public/examples/: basic-rag.md  custom-retrieval.md  server-deployment.md  with-adapters.md
docs/public/getting-started/: installation.md  quickstart.md  what-is-rag-axis.md  why-not-langchain.md  your-first-rag.md
docs/public/guides/: building-custom-adapter.md  composing-layers.md  contributing-invariants.md  contributing-release.md  contributing-setup.md  deploying-server.md  using-ldk.md
docs/shared/: architecture.md  glossary.md  invariants.md  packages.md  philosophy.md
docs/shared/_archive/: non-goals.md
docs/src/components/HomepageFeatures/: index.tsx
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py
src/ragaxis/: __init__.py
src/ragaxis/adapters/: __init__.py
src/ragaxis/adapters/embedding/: __init__.py  anthropic.py  base.py  hugging_face.py  openai.py
src/ragaxis/adapters/llm/: base.py  (+3 more)
src/ragaxis/bench/: __init__.py  fixtures.py  metrics.py
src/ragaxis/core/: __init__.py  chunking.py  corpus.py  ingestion.py
src/ragaxis/corpus/: __init__.py  versioning.py
src/ragaxis/knowledge/: __init__.py  registry.py
src/ragaxis/ldk/: __init__.py  index.py  pipeline.py  retrieval.py  synthesis.py
src/ragaxis/otel/: __init__.py  config.py  hooks.py  spans.py
src/ragaxis/retrieval/: __init__.py  dense.py  hybrid.py  scoring.py  sparse.py  validation.py
src/ragaxis/server/: __init__.py  main.py
src/ragaxis/synthesis/: __init__.py  context.py  generation.py  guards.py  reranking.py
src/ragaxis/system/: __init__.py  executor.py  pipeline.py  result.py
tests/: test_placeholder.py
tests/server/: conftest.py  test_api_configurations.py  test_api_experiments.py  test_api_health.py  test_api_knowledge.py  test_api_projects.py
(+67 files in other folders)
